tests/wdk-macros-tests/tests/outputs/beta/trybuild/wdf_api_that_does_not_exist.stderr
error: Failed to find type alias definition for PFN_WDFAPITHATDOESNOTEXIST
 --> tests/outputs/beta/trybuild/wdf_api_that_does_not_exist.rs
  |
  |     unsafe { call_unsafe_wdf_function_binding!(WdfApiThatDoesNotExist, driver as PDRIVER_OBJECT,) }
  |                                                ^^^^^^^^^^^^^^^^^^^^^^
